updated validation of all pages and fixed errors

--- a/html/notify-form.html
+++ b/html/notify-form.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Four Functioneers" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Four Functioneers">
     <title>Buyer’s Market</title>
 
     <!-- GOOGLE FONTS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
-    />
+    >
     <!-- GLOBAL CSS -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <!-- === ACTIVE NAV STATE (auto-highlight current page) === -->
   <body class="notify-page">
@@ -26,7 +26,7 @@
             src="../images/Logo-Img-Green.png"
             alt="Buyer's Market Logo"
             class="site-logo"
-          />
+          >
         </a>
 
         <h1 class="site-title">
@@ -64,7 +64,7 @@
           name="yourName"
           placeholder="Your name"
           required
-        />
+        >
 
         <label for="email">Email (required)</label>
         <input
@@ -73,7 +73,7 @@
           name="email"
           placeholder="you@example.com"
           required
-        />
+        >
 
         <!-- “City” dropdown (Bellevue only, required) -->
 
@@ -83,28 +83,29 @@
           <option value="Bellevue">Bellevue</option>
         </select>
 
+
         <div class="category-card">
           <label>Categories (choose one or more)</label>
 
           <div class="notify-categories">
             <label
-              ><input type="checkbox" name="cat" value="Arts Crafts" /> Arts &
+              ><input type="checkbox" name="cat" value="Arts Crafts"> Arts &
               Crafts</label
             >
             <label
-              ><input type="checkbox" name="cat" value="Home Decor" /> Home
+              ><input type="checkbox" name="cat" value="Home Decor"> Home
               Decor</label
             >
             <label
-              ><input type="checkbox" name="cat" value="Home Furnishings" />
+              ><input type="checkbox" name="cat" value="Home Furnishings">
               Home Furnishings</label
             >
             <label
-              ><input type="checkbox" name="cat" value="Office Supplies" />
+              ><input type="checkbox" name="cat" value="Office Supplies">
               Office Supplies</label
             >
             <label
-              ><input type="checkbox" name="cat" value="Packing Materials" />
+              ><input type="checkbox" name="cat" value="Packing Materials">
               Packing Materials</label
             >
           </div>
@@ -116,11 +117,9 @@
         </div>
 
         <!-- “Notification Frequency” dropdown -->
-
+        <label for="frequency">How often would you like to receive updates?</label>
         <select id="frequency" name="frequency" required>
-          <small class="frequency-help">
-            How often would you like to receive updates?
-          </small>
+
           <option value="" disabled selected>Select frequency</option>
 
           <option
@@ -148,7 +147,7 @@
         <!-- Consent checkbox (“I agree to receive notifications”) -->
 
         <label class="consent-label">
-          <input type="checkbox" id="consent" name="consent" required />
+          <input type="checkbox" id="consent" name="consent" required>
           I agree to receive email notifications about new items.
           <small
             >Your email will only be used for Buyer’s Market
