--- a/html/about.html
+++ b/html/about.html
@@ -2,25 +2,25 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    >
     <meta
       name="author"
       content="Anna Fagan, Catherine Hawley, Kelly Daniel, Lizbeth Garcia"
-    />
+    >
     <title>Buyer's Market</title>
     <!-- GOOGLE FONTS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
-    />
+    >
     <!-- GLOBAL CSS -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" >
 
     <style>
       h2 {
@@ -49,7 +49,7 @@
             src="../images/Logo-Img-Green.png"
             alt="Buyer's Market Logo"
             class="site-logo"
-          />
+          >
         </a>
 
         <h1 class="site-title">
