--- a/html/listings.html
+++ b/html/listings.html
@@ -2,26 +2,26 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    >
     <meta
       name="author"
       content="Anna Fagan, Catherine Hawley, Kelly Daniel, Lizbeth Garcia"
-    />
+    >
     <title>Buyer's Market</title>
 
     <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
-    />
+    >
     <!-- GLOBAL CSS -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <!-- === ACTIVE NAV STATE (auto-highlight current page) === -->
   <body class="listings-page">
@@ -33,7 +33,7 @@
             src="../images/Logo-Img-Green.png"
             alt="Buyer's Market Logo"
             class="site-logo"
-          />
+          >
         </a>
 
         <h1 class="site-title">
@@ -65,11 +65,11 @@
               type="checkbox"
               id="artSuppliesCheck"
               name="packing-supplies"
-            />
+            >
           </div>
           <div class="listing-categories">
             <label for="homeDecorCheck">Home Decor</label>
-            <input type="checkbox" id="homeDecorCheck" name="home-decor" />
+            <input type="checkbox" id="homeDecorCheck" name="home-decor">
           </div>
           <div class="listing-categories">
             <label for="officeSuppliesCheck">Office Supplies</label>
@@ -77,7 +77,7 @@
               type="checkbox"
               id="officeSuppliesCheck"
               name="office-supplies"
-            />
+            >
           </div>
           <div class="listing-categories">
             <label for="packingMaterialsCheck">Packing Materials</label>
@@ -85,7 +85,7 @@
               type="checkbox"
               id="packingMaterialsCheck"
               name="packing-materials"
-            />
+            >
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
             src="../images/plug-in-wall-lamp.jpg"
             alt="A 1970's plug in wall lamp, brown handle, no lamp shade."
             class="listing-image-container"
-          />
+          >
           <p>
             Works great, no lamp shade. Old-style 2-prong plug. Main body is 30
             inches long. With attached rigid cord cover, entire assembly is
@@ -121,7 +121,7 @@
             src="../images/artificial-olive-tree.jpg"
             alt="Artificial olive tree with realistic leaves"
             class="listing-image-container"
-          />
+          >
           <p>
             About 6ft tall, pot included. The tree has realistic leaves but is
             indeed fake. Will need the ability to transport the pot as one piece
@@ -140,7 +140,7 @@
             src="../images/decorative-pillows.jpg"
             alt="A set of three decorative pillows"
             class="listing-image-container"
-          />
+          >
           <p>
             Three pillows, beige. Good condition. Must be able to pick up at a
             public location and not ask too many questions about me. Pickup
@@ -162,7 +162,7 @@
             src="../images/assorted-notepads.jpg"
             alt="Two notepads stacked on top of each other"
             class="listing-image-container"
-          />
+          >
           <p>
             Two random notepads. The first is 4.5 by 5 inches, not sticky, and
             has the WSU logo on the pad. The second pad is sticky notes,
