--- a/html/notify-confirmation.html
+++ b/html/notify-confirmation.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Four Functioneers" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Four Functioneers">
     <title>Confirmation Receipt</title>
 
     <!-- GOOGLE FONTS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
-    />
+    >
     <!-- GLOBAL CSS -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <!-- === ACTIVE NAV STATE (auto-highlight current page) === -->
   <body class="notify-page">
@@ -25,7 +25,7 @@
             src="../images/Logo-Img-Green.png"
             alt="Buyer's Market Logo"
             class="site-logo"
-          />
+          >
         </a>
 
         <h1 class="site-title">
